	  support (primitive), chained certificates and numerous bug fixes
	- Linux epoll support
	- Optional support for blank passwords
	- DNS search list improvements: added support for Windows DNS search
	  list and display of search list in DNS stats
	- Added the capability to run as a Windows service under Cygwin
	- CARP now plays well with the other peering algorithms

Changes to squid-2.5.STABLE14 (20 May 2006)
	- [Minor] icons not displayed when visible_hostname is a
	  short hostname (without domain). (Bug #1532)
	- [Medium] Memleak in HTCP client code (default disabled)
	  (Bug #1553)
	- [Major] memory leak in ident processing (Bug #1557)
	- [Medium] Memory leak in header processing related to external_acl
	  header detail format tag (Bug #1564)

Changes to squid-2.5.STABLE13 (12 Mar 2006)
	- [Minor] Fails to compile on Solaris and some other platforms
	  with undefined reference to setenv (Bug #1435)
	- [Cosmetic] Added WebDAV REPORT method to know HTTP methods list
	- [Minor] Squid ntlm_auth (not the Samba provided one) giving
	  odd results if --enable-ntlm-fail-open is used (Bug #1022)
	- [Minor] wbinfo_group.pl doesn't work with Samba 3.0.21 and later
	  (Bug #1472)
	- [Minor] Squid crash when asyncio function counters url accessed
	  from Cachemgr CGI (Bug #1464)
	- [Cosmetic] Linux compile warning about prctl called with too few
	  arguments (Bug #1483)
	- [Minor] Wrong timezone declaration for 64 bit Irix (Bug #1479)
	- [Minor] Some 206 responses logged incorrectly (Bug #1511)
	- [Minor] Issues in processing ranges on objects >2GB (Bug #437)
	- [Cosmetic] Segmentation fault on empty proxy_auth ACLs (Bug #1414)
	- [Minor] Ident access lists don't work in delay_access statements
	  (Bug #1428)
	- [Minor] Some clients support NTLM even if not initially negotiating
	  persistent connections (Bug #1447)
	- [Medium] 504 Gateway Time-out on FTP uploads (Bug #1459)
	- [Medium] delay pools given too much bandwidht after "-k reconfigure"
	  (Bug #1481)