@@ -25,6 +25,7 @@ Changes to squid-2.6 (not yet released)
 	  list and display of search list in DNS stats
 	- Added the capability to run as a Windows service under Cygwin
 	- CARP now plays well with the other peering algorithms
+	- read_ahead_gap option to read ahead more than 16KB of the reply
 
 Changes to squid-2.5.STABLE14 (20 May 2006)
 	- [Minor] icons not displayed when visible_hostname is a
